SUP-427: Added profile 'javafx-run'.